--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: Website for Anne Teahan
 baseurl: ""
 # the base hostname & protocol for your site
 url: "http://www.anneteahan.co.uk/"
-logo: "/assets/logo.png"
+logo: "/site-icon.png"
 email: anne.teahan1@btopenworld.com
 
 # Build settings
@@ -128,10 +128,10 @@ social:
 # These are for automatically generating sharing metadata for FB and Twitter
 # OS Protocol is for sharing the source of your site, if you're interested. For more, see osprotocol.com
 protocols:
-    fb_image: "/assets/logo.png"
-    fb_image_width: 612
-    fb_image_height: 605
+    fb_image: "/site-icon.png"
+    fb_image_width: 480
+    fb_image_height: 480
     fb_image_type: "image/png"
 
-    twitter_image: "/assets/logo.png"
+    twitter_image: "/site-icon.png"
 
