--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ themecolor: #ffffff
 tilecolor: #ffffff
 # Image CDN
 imagecdn:
-  #staging: "http://ed-dev.imgix.net"
-  #production: "http://ed.imgix.net"
+  staging: "https://ed-anneteahan-dev.imgix.net"
+  production: "https://ed-anneteahan.imgix.net"
 
 # Collections Example
 collections:
