Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ baseurl: ""
 # the base hostname & protocol for your site
 url: "https://www.anneteahan.co.uk/"
 logo: "/site-icon.png"
-email: "anne.teahan1@btopenworld.com"
+email: "anneteahan2@gmail.com"
 
 asset_url: "/assets/"
 # Build settings
